feature - added usage permissions command + protection against spammers (Cooldown interaction)